Fix spacing with small window width

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -57,11 +57,11 @@ body {
 	&[data-file-hover] {
 		box-shadow: inset 0 0 .75em .25em;
 	}
-}
 
-#drag-panel-text {
-	margin: 0 1em;
-	text-align: center;
+	& > * {
+		margin: 0 1em;
+		text-align: center;
+	}
 }
 
 button,
